pulse/test/bug-reports/Bug278.fst.output.expected
* Info at Bug278.fst(29,5-31,5):
  - Expected failure:
  - Tactic failed
  - Internal error: unexpected unresolved (universe) uvar in deep_compress: 41

